# personal-site

./: .dockerignore  .gitignore  Dockerfile  HOWTO.md  Procfile  Procfile.debug  README.md  deploy_debug.sh  deploy_dev.sh  deploy_local.sh  fly.toml  go.mod  go.sum  main.go  pyproject.toml  requirements.txt  run.sh
api/: api.go
app/: app.py  discogs.py  spotifywrap.py
app/tasks/: crossword.py
app/templates/: base.html.j2  crossword_history.html.j2  index.html  index.html.j2  projects.html.j2  vinyl_collection.html.j2  vinyl_no_user.html.j2
routes/: api.go  pages.go  routes.go
static/css/: main.css
static/js/: main.js
templates/: carousel-vinyl.tmpl.html  index.go.tmpl  index.tmpl.html
templates/base/: boilerplate.html.tmpl  boilerplate.tmpl.html  index.html.tmpl  index.tmpl.html
templates/components/: carousel-movies.tmpl.html  carousel-songs.tmpl.html  carousel-vinyl.tmpl.html
templates/pages/: index.tmpl.html
templates/panels/: home-FULL.html.tmpl  home.html.tmpl  home.tmpl.html  projects-FULL.tmpl.html  projects.html.tmpl  projects.tmpl.html  vinyl-FULL.tmpl.html  vinyl.html.tmpl  vinyl.tmpl.html
templates/projects/: project-ceeder-FULL.html.tmpl  project-ceeder.html.tmpl  project-ceeder.tmpl.html  project-discord-FULL.html.tmpl  project-discord.html.tmpl  project-herodotus-FULL.html.tmpl  project-herodotus.html.tmpl  project-herodotus.tmpl.html  project-justin-FULL.html.tmpl  project-justin.html.tmpl  project-justin.tmpl.html  project-microbiome-FULL.html.tmpl  project-microbiome.html.tmpl  project-microbiome.tmpl.html  project-pathos.html.tmpl  (+12 more)
(+26 files in other folders)
