[tool.poetry]
name = "personal-site"
version = "0.1.0"
description = "files for my site"
authors = ["Darwin Do <darwin78913@gmail.com>"]
license = "GNU"
readme = "README.md"
packages = [{include = "personal_site"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-Caching = "^2.0.1"
Flask-APScheduler = "^1.12.4"
APScheduler = "^3.9.1.post1"
defusedxml = "^0.7.1"
google-auth = "^2.16.0"
gspread = "^5.7.2"
python-dotenv = "^0.21.0"
python3-discogs-client = "^2.6"
selenium = "^4.7.2"
spotipy = "^2.22.0"
gunicorn = "^20.1.0"
pylibmc = "^1.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
